assets/css/style.css
/*-------------------------------------------------------------   Header       */

.header {
    background-color: #292928;
    color: 	rgb(211, 211, 211)
}

/*-------------------------------------------------------------   Navigation bar       */

.nav-item{
    display: inline-block;
    text-align: center;
    padding-bottom: 35px;
    padding-right: 40px;
    padding-left: 40px;
    font-size: 25px;
}

.nav-item a:hover{
    text-decoration: none;
}

.home{
    color: rgb(211, 211, 211)
}

.home:hover{
    color: rgb(117, 115, 115)
}

.easy{
    color: rgb(78, 250, 78)
}

.easy:hover{
    color: rgb(4, 168, 4)
}

.medium{
    color: rgb(233, 253, 56)
}

.medium:hover{
    color: rgb(162, 175, 40)
}

.hard{
    color: rgb(238, 17, 17)
}

.hard:hover{
    color: rgb(145, 12, 12)
}

/*-------------------------------------------------------------   Body and Content       */

html, body {
  height: 100%;
  text-align: center;
  position: relative;
}

body {
  display: flex;
  flex-direction: column;
}

.content {
  flex: 1 0 auto;
}

.index-board {
    padding-bottom: 20px;
}

.information {
    padding-bottom: 20px;
    font-size: 20px;
}

.sidebar {
    background-color: #292928;
}

/*-------------------------------------------------------------   Cards and their flipping       */

.backside {
    position: absolute;
    width: calc(100% - 30px);
    height: calc(120% - 30px);
}

.frontside,
.backside {
    background: white;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    padding-top: 1px;
    background-color: transparent;
}

.frontside {
    transform: rotateY(180deg);
    width: 100%;
    height: calc(120% - 30px);;
}

img {
    width: 100%;
    height: 100%;
}

.card:active {
    transform: scale(.97);
    transition: transform .2s;
}

.card.flip {
    transform: rotateY(180deg);
}

.league-memorygame {
    background-color: transparent;
    perspective: 1000px;
}

.card {
    margin-left: 20px;
    margin-right: 20px;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
    border-width: 0;
    background-color: transparent;
}

/*-------------------------------------------------------------   Home Page    */


.main-page {
    background-image: url('../images/backgroundhomecap.png');
    width: 100%;
    height: 100%;
}

/*-------------------------------------------------------------   Game completed modal      */

.modal {
  display: none; 
  position: fixed; 
  z-index: 1; 
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%; 
  background-color: rgba(0,0,0,0.4);
}

.modal-content {
  background-color: #fefefe;
  margin: 15% auto; 
  padding: 20px;
  width: 80%; 
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/*-------------------------------------------------------------   Footer       */

.footer {
    background-color: #292928;
    color: 	#F5F5F5;
}

.footer {
  flex-shrink: 0;
  
}

